2007-04-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/contractual.py:
	* gaupol/opts.py:
	New files.

	* gaupol/calculator.py:
	Use one instance per framerate.

	* gaupol/util.py (contractual):
	Handle only global functions.

2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/determiner.py:
	Add contracts.
	Read file one line at a time.

	* gaupol/files/ass.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/_subfile.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	Have identifiers be compiled.

2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/liner.py (is_legal):
	Make this a method again.

2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/enclib.py:
	* gaupol/util.py:
	Replace memoize with once where appropriate.

2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/singleton.py (__new__):
	Fix to work with inheritance.

	* gaupol/converter.py:
	* gaupol/tags/ass.py:
	* gaupol/tags/__init__.py:
	* gaupol/tags/internal.py:
	* gaupol/tags/microdvd.py:
	* gaupol/tags/mpl2.py:
	* gaupol/tags/ssa.py:
	* gaupol/tags/subrip.py:
	* gaupol/tags/_taglib.py:
	Simplify TagLibrary interface.

	* gaupol/util.py (once):
	New decorator.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/files/__init__.py:
	* gaupol/i18n.py:
	* gaupol/liner.py:
	* gaupol/paths.py:
	* gaupol/scriptlib.py:
	Minor changes.

	* tools/nose-cover:
	Remove file.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py:
	Remove gc_collected.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/__init__.py:
	Import singleton.Singleton.

	* gaupol/base/singleton.py:
	New file with a Singleton base class.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/nose-cover:
	Fix to work with individual modules.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py:
	Fix module docstring.
